Fix horizontal align for voted icon

--- a/src/polls-block/style.scss
+++ b/src/polls-block/style.scss
@@ -11,6 +11,7 @@
 
   .poll-option-label {
     display: flex;
+    align-items: center;
     padding: 8px 12px;
     background: #fff;
     border: 1px solid #ddd;
